objects/Parent_Info__c.object
<CustomObject>
    <fields>
        <fullName>Child__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child</label>
        <referenceTo>Child__c</referenceTo>
        <relationshipLabel>Parents Info</relationshipLabel>
        <relationshipName>Parents_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Name__c</fullName>
        <label>Parent Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Number__c</fullName>
        <label>Parent Number</label>
        <type>Phone</type>
    </fields>
    <label>Parent Info</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Parent Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parents Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>